# supabrain-kanban

./: README.md  index.html  jarvis-dashboard.html  jarvis-pwa.html  kanban-pwa-cip.html  kanban-pwa.html  manifest-cip.json  manifest.json  sw-cip.js  sw.js
.github/workflows/: cip-desktop-ci.yml
article-studio/: README.md  index.html  manifest.webmanifest  sw.js
cip-desktop/: README.md  index.html  package-lock.json  package.json  vite.config.ts
cip-desktop/src/: App.tsx  api.ts  nav.ts  styles.css
cip-desktop/src-tauri/: Cargo.toml  tauri.conf.json
cip-desktop/src-tauri/icons/: icon.icns
cip-desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
cip-desktop/src-tauri/src/platform/: audio.rs  fs.rs  macos.rs  mod.rs  windows.rs
cip-desktop/src-tauri/src/vault/: mod.rs
cip-desktop/src-tauri/src/vault/migrations/: 0001_init.sql
cip-desktop/src/views/: CampaignGate.tsx  Dashboard.tsx  Placeholder.tsx  RecordSession.tsx  Sessions.tsx
supabase/functions/agent-runner/: index.ts
