[package]
name = "cip-desktop"
version = "0.1.0"
description = "Campaign Intelligence Platform — local-first desktop app"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cip_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

[features]
# by default Tauri wants a custom-protocol feature in release builds
custom-protocol = ["tauri/custom-protocol"]
